--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,12 @@
 		<link
 		href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700&display=swap" rel="stylesheet">
 
+		<!-- CSS only -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+		<link
+		rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
 		<!-- Css Styles -->
 		<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" type="text/css">
 		<link rel="stylesheet" href="{{ asset('css/font-awesome.min.css') }}" type="text/css">
@@ -86,7 +92,7 @@
 					</li>
 
 					<li>
-						<a href="./contact.html">Contact</a>
+						<a href="{{ path('app_contact') }}">Contact</a>
 					</li>
 				</ul>
 			</nav>
@@ -210,7 +216,7 @@
 										</li>
 
 										<li>
-											<a href="./contact.html">Contact</a>
+											<a href="{{ path('app_contact') }}">Contact</a>
 										</li>
 									</ul>
 								</nav>
